--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,4 +1,4 @@
- <!doctype html>
+ git<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -10,6 +10,7 @@
     <a href="aboutme.html">aboutme</a>
     <h1>This is my test Home Page!</h1>
     <img src="images/charger.jpg" height="250">
+    <p>Test Test</p>
   </body>
 </html>
 <a href="https://www.youtube.com/watch?v=uMrilYsIw2c">youtube link</a>
