ver1.02 git push g

--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -8,5 +8,7 @@
     <a href="index.html">Home</a>
     <h1>welcome to about me page!</h1>
     <img src="images/gearhead.jpg" height="450">
-  </body> my name is Ruben Vargas and was born a gear head 03/20/2000  
+   <float="right"> my name is Ruben Vargas and was born a gear head 03/20/2000  </float>
+  </body> 
+    <img src="images/charger.jpg" height="250">
 </html>
