--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,16 +1,292 @@
- git<!doctype html>
+<DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">aboutme</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/charger.jpg" height="250">
-    <p>Test Test</p>
-  </body>
+<head>
+<title>Ruben Vargas</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: red;
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>This is Ruben Vargas website</h1>
+</div>
+
+<div class="topnav">
+  <a href="https://rvargas160.github.io/my_website/index.html"style="color:cyan;">Home</a>
+  <a href="https://rvargas160.github.io/my_website/portfolio.html"style="color;cyan;">My portfolio</a>
+  <a href="https://rvargas160.github.io/my_website/aboutme.html"style="color;cyan;">About me </a>
+  <a href="https://www.w3schools.com/css/default.asp"target="_blank"style="color;cyan;">W3 schools</a>
+  <a href="https://www.summitracing.com/"target="_blank"style="color;cyan;">Car Needs</a>
+</div>
+</body>
 </html>
-<a href="https://www.youtube.com/watch?v=uMrilYsIw2c">youtube link</a>
+
+</body>
+</html>
+<DOCTYPE html>
+<html>
+<head>
+<style>
+div.container {
+    width: 100%;
+    border: 0px solid grey;
+}
+
+header, footer {
+    padding: 1em;
+    color: ;
+    background-color: white;
+    clear: left;
+    text-align: center;
+
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 0em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-middle: 170px;
+    border-left: 1px solid gray;
+    padding: 10em;
+    overflow: hidden;
+  
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+
+<header>
+   <h1>My Home Page</h1>
+</header>
+
+
+       
+  <DOCTYPE html>
+<html>
+<head>
+<style>
+ img {
+    display: block;
+    margin: 0 auto;
+}
+</style>
+</head>
+<body>
+
+<h2></h2>
+<p></p>
+
+<table width="500">
+ <tbody><tr><td><h1><p 
+  <p><p style="color:black;">This the first time i ever code a website!</p>
+  <p><p style="color:red;">DDDDD</p>
+   <p style="color:red;">HIaaaa<p>. </td>
+</tr>
+</tbody></table>
+<DOCTYPE html>
+<html>
+<head>
+<style>
+.left {
+    float: left;
+    width: 750px;
+   
+    padding: 10px;
+}
+</style>
+</head>
+<body>
+
+<div class="left">
+  <p><p> 
+<DOCTYPE html>
+<html>
+<head>
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+</head>
+<body>
+  
+<table>
+  <tr>
+    <th>Subject</th>
+    <th>Teacher</th>
+    <th>Room and Period</th>
+  </tr>
+  <tr>
+    <td>CSU Expository RDG & WTG</td>
+    <td>Sargent, Jilleen</td>
+    <td>T-8 Period.1</td>
+  </tr>
+  <tr>
+    <td>US GOVT</td>
+    <td>Korn, Edward</td>
+    <td>T-13 Period.2</td>
+  </tr>
+  <tr>
+    <td>STATISTICS</td>
+    <td>Rodriguez, Roberto</td>
+    <td>A-324 Period.3</td>
+  </tr>
+  <tr>
+    <td>UCCI SOLVING WATER PROBLEMS</td>
+    <td>Stein, Dennis</td>
+    <td>A-205 Period.4</td>
+  </tr>
+  <tr>
+    <td>CHICANO STUDIES</td>
+    <td>Gradilla, Rafael C</td>
+    <td>T-10 Period.5</td>
+  </tr>
+  <tr>
+    <td>COMPUTER SCIENCE PRINCIPLES</td>
+    <td>Nakmee, Sasai J</td>
+    <td>A-323 Period.6</td>
+  </tr>
+    <tr>
+    <td>NO CLASS 7TH</td>
+    <td>Varee, Rosalyn</td>
+    <td>1-ADMIN Period.7</td>
+  </tr>
+    <tr>
+    <td>NO CLASS 8TH</td>
+    <td>Varee, Rosalyn</td>
+    <td>1-ADMIN Period.8</td>
+  </tr>
+</table>
+</body>
+</html>
+<DOCTYPE html>
+<html>
+<head>
+<style>
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url();
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
+</head>
+<body>
+
+<div class="bg"></div>
+<body background="images/impala.jpg">
+
+</body>
+</html>
+<DOCTYPE html>
+</article>
+</div>
+</body>
+<body>
+
+<p><a href="https://www.youtube.com/watch?v=GEOdPCFCoIs/html/">Puro Chalino</a></p>
+
+</body>
+<style>
+a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: gold;
+    background-color: transparent;
+    text-decoration: underline;
+}
+a:active {
+    color: pink;
+    background-color: transparent;
+    text-decoration: underline;
+}
+</style>
+
+
+
+
+
+
+
+
+
+</html>
+<footer>Copyright &copy; W3Schools.com</footer>
