--- a/my_website/index.html
+++ b/my_website/index.html
@@ -55,6 +55,8 @@ body {
   <a href="https://rvargas160.github.io/my_website/aboutme.html"style="color;cyan;">About me </a>
   <a href="https://www.w3schools.com/css/default.asp"target="_blank"style="color;cyan;">W3 schools</a>
   <a href="https://www.summitracing.com/"target="_blank"style="color;cyan;">Car Needs</a>
+  <a href="https://www.youtube.com/watch?v=GEOdPCFCoIs/html/">Puro Chalino</a>
+
 </div>
 </body>
 </html>
@@ -131,9 +133,9 @@ article {
 
 <table width="500">
  <tbody><tr><td><h1><p 
-  <p><p style="color:black;">This the first time i ever code a website!</p>
-  <p><p style="color:red;">DDDDD</p>
-   <p style="color:red;">HIaaaa<p>. </td>
+  <p><center><p style="color:black;">This the first time I ever code a website!</p></center>
+  <p><p style="color:black;"></p>
+   <p style="color:red;"><p>. </td>
 </tr>
 </tbody></table>
 <DOCTYPE html>
@@ -152,8 +154,9 @@ article {
 
 <div class="left">
   <p><p> 
+
 <DOCTYPE html>
-<html>
+<table align="right">  
 <head>
 <style>
 table {
@@ -217,7 +220,7 @@ tr:nth-child(even) {
   </tr>
 </table>
 </body>
-</html>
+</html></table>
 <DOCTYPE html>
 <html>
 <head>
@@ -254,7 +257,6 @@ body, html {
 </body>
 <body>
 
-<p><a href="https://www.youtube.com/watch?v=GEOdPCFCoIs/html/">Puro Chalino</a></p>
 
 </body>
 <style>
